fix(jpms): stabilize classloading and avoid agent self-attach hangs