@@ -22,6 +22,7 @@ package org.evosuite.utils;
 import org.evosuite.ClientProcess;
 import org.evosuite.ConsoleProgressBar;
 import org.evosuite.Properties;
+import org.evosuite.executionmode.ExecutionModeUtils;
 import org.evosuite.result.TestGenerationResult;
 import org.evosuite.result.TestGenerationResultBuilder;
 import org.evosuite.rmi.MasterServices;
@@ -310,6 +311,7 @@ public class ExternalProcessGroupHandler {
             ProcessBuilder builder = new ProcessBuilder(command);
             builder.directory(dir);
             builder.redirectErrorStream(false);
+            addCommonModuleOpensToSpawnedJvmEnv(builder);
 
             try {
                 processGroup[processIndex] = builder.start();
@@ -347,6 +349,39 @@ public class ExternalProcessGroupHandler {
         lastCommands[processIndex] = command;
 
         return true;
+    }
+
+    /**
+     * Ensure spawned JVMs receive the same module-open arguments as the explicit command-line path.
+     * This provides a resilient fallback in case argument forwarding/order strips options.
+     */
+    private static void addCommonModuleOpensToSpawnedJvmEnv(ProcessBuilder builder) {
+        if (builder == null) {
+            return;
+        }
+
+        List<String> moduleArgs = new ArrayList<>();
+        ExecutionModeUtils.addCommonModuleOpens(moduleArgs);
+        if (moduleArgs.isEmpty()) {
+            return; // Java 8 path: no module flags.
+        }
+
+        String joined = String.join(" ", moduleArgs).trim();
+        if (joined.isEmpty()) {
+            return;
+        }
+
+        Map<String, String> env = builder.environment();
+        String existing = env.get("JDK_JAVA_OPTIONS");
+        if (existing == null || existing.trim().isEmpty()) {
+            env.put("JDK_JAVA_OPTIONS", joined);
+            return;
+        }
+
+        // Avoid repeated growth when restarting clients.
+        if (!existing.contains("--add-opens")) {
+            env.put("JDK_JAVA_OPTIONS", existing + " " + joined);
+        }
     }
 
     /**
